tests/syntax_error/c_not.jou
def foo() -> void:
    if !x:  # Error: use 'not' instead of '!'
        pass
